--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <meta name="theme-color" content="#0F1116">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>Mauricio Suarez</title><!-- Visible en la tab -->
-  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@100;400;700&display=swap"
-    rel="stylesheet">
-  <script src="https://kit.fontawesome.com/3c9afaf9e1.js" crossorigin="anonymous"></script>
+  rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header id="navigation"><!-- Header con logo y menu de navegación -->
@@ -48,6 +48,59 @@
   </header>
   <main><!-- Seccion principal con... -->
     <section id="slider"><!-- Seccion con sliders -->
+      <div id="my-carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#my-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#my-carousel" data-slide-to="1"></li>
+          <li data-target="#my-carousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/poster.jpg" alt="poster">
+            <iframe  width="1920" height="1600" src="https://www.youtube-nocookie.com/embed/s2DdDABq5ZU?playlist=s2DdDABq5ZU&controls=0&autoplay=1&mute=1&loop=1" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+            <div class="text-wrapper">
+              <div class="container">
+                <h2>Derrallodor Web</h2>
+                <p>Experiencia, motivación, atención al detalle</p>
+                <a href="contacto.html" class="btn">Conocer más</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img loading="lazy" src="img/slide2.jpg" alt="slide 2" loading="lazy">
+            <div class="text-wrapper">
+              <div class="container">
+                <h2>+400 proyectos con distintas Tecnologías</h2>
+                <p>PHP, Javascript, React, Wordpress</p>
+                <a href="proyectos.html" class="btn">Ver Proyectos</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img loading="lazy" src="img/slide3.jpg" alt="slide 3" loading="lazy">
+            <div class="text-wrapper">
+              <div class="container">
+                <h2>Formación Continua</h2>
+                <p>Especialización en Gestión Estratégica de Sistemas y Tecnologías de la Información</p>
+                <p>Licenciatura en Administración de Empresas de Diseño</p>
+                <p>Curso de Desarrollo Fullstack (CODERHOUSE)</p>
+                <a href="perfil.html" class="btn">Ver Educación</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#my-carousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#my-carousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
       <div class="slider-container">
         <input type="radio" name="slides" class="input-slide" id="input-slide-1" checked>
         <div class="item">
@@ -55,7 +108,7 @@
           <iframe  width="1920" height="1600" src="https://www.youtube-nocookie.com/embed/s2DdDABq5ZU?playlist=s2DdDABq5ZU&controls=0&autoplay=1&mute=1&loop=1" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-          <div class="text-wrapper">
+          <div class="text-wrapper carousel-caption">
             <div class="container">
               <h2>Derrallodor Web</h2>
               <p>Experiencia, motivación, atención al detalle</p>
@@ -66,7 +119,7 @@
         <input type="radio" name="slides" class="input-slide" id="input-slide-2">
         <div class="item">
           <img loading="lazy" src="img/slide2.jpg" alt="slide 2" loading="lazy">
-          <div class="text-wrapper">
+          <div class="text-wrapper carousel-caption">
             <div class="container">
               <h2>+400 proyectos con distintas Tecnologías</h2>
               <p>PHP, Javascript, React, Wordpress</p>
@@ -77,7 +130,7 @@
         <input type="radio" name="slides" class="input-slide" id="input-slide-3">
         <div class="item">
           <img loading="lazy" src="img/slide3.jpg" alt="slide 3" loading="lazy">
-          <div class="text-wrapper">
+          <div class="text-wrapper carousel-caption">
             <div class="container">
               <h2>Formación Continua</h2>
               <p>Especialización en Gestión Estratégica de Sistemas y Tecnologías de la Información</p>
@@ -253,6 +306,8 @@
       <span class="copyright">Mauricio Suarez 2021 © Todos los derechos resrvados.</span>
     </div>
   </footer>
-
+  <script src="https://kit.fontawesome.com/3c9afaf9e1.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html> 
