--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <iframe  width="1920" height="1600" src="https://www.youtube-nocookie.com/embed/s2DdDABq5ZU?playlist=s2DdDABq5ZU&controls=0&autoplay=1&mute=1&loop=1" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-            <div class="text-wrapper">
+            <div class="text-wrapper carousel-caption">
               <div class="container">
                 <h2>Derrallodor Web</h2>
                 <p>Experiencia, motivación, atención al detalle</p>
@@ -70,7 +70,7 @@
           </div>
           <div class="carousel-item">
             <img loading="lazy" src="img/slide2.jpg" alt="slide 2" loading="lazy">
-            <div class="text-wrapper">
+            <div class="text-wrapper carousel-caption">
               <div class="container">
                 <h2>+400 proyectos con distintas Tecnologías</h2>
                 <p>PHP, Javascript, React, Wordpress</p>
@@ -80,7 +80,7 @@
           </div>
           <div class="carousel-item">
             <img loading="lazy" src="img/slide3.jpg" alt="slide 3" loading="lazy">
-            <div class="text-wrapper">
+            <div class="text-wrapper carousel-caption">
               <div class="container">
                 <h2>Formación Continua</h2>
                 <p>Especialización en Gestión Estratégica de Sistemas y Tecnologías de la Información</p>
