--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
   <main><!-- Seccion principal con... -->
     <section id="slider"><!-- Seccion con sliders -->
-      <div id="my-carousel" class="carousel slide" data-ride="carousel">
+      <div id="my-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="10000">
         <ol class="carousel-indicators">
           <li data-target="#my-carousel" data-slide-to="0" class="active"></li>
           <li data-target="#my-carousel" data-slide-to="1"></li>
@@ -60,7 +60,7 @@
             <iframe  width="1920" height="1600" src="https://www.youtube-nocookie.com/embed/s2DdDABq5ZU?playlist=s2DdDABq5ZU&controls=0&autoplay=1&mute=1&loop=1" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-            <div class="text-wrapper carousel-caption">
+            <div class="text-wrapper">
               <div class="container">
                 <h2>Derrallodor Web</h2>
                 <p>Experiencia, motivación, atención al detalle</p>
@@ -70,7 +70,7 @@
           </div>
           <div class="carousel-item">
             <img loading="lazy" src="img/slide2.jpg" alt="slide 2" loading="lazy">
-            <div class="text-wrapper carousel-caption">
+            <div class="text-wrapper">
               <div class="container">
                 <h2>+400 proyectos con distintas Tecnologías</h2>
                 <p>PHP, Javascript, React, Wordpress</p>
@@ -80,7 +80,7 @@
           </div>
           <div class="carousel-item">
             <img loading="lazy" src="img/slide3.jpg" alt="slide 3" loading="lazy">
-            <div class="text-wrapper carousel-caption">
+            <div class="text-wrapper">
               <div class="container">
                 <h2>Formación Continua</h2>
                 <p>Especialización en Gestión Estratégica de Sistemas y Tecnologías de la Información</p>
@@ -91,55 +91,14 @@
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#my-carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <a class="carousel-control-prev d-none d-md-flex" href="#my-carousel" role="button" data-slide="prev">
+          <span class="fas fa-angle-left fa-3x" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#my-carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <a class="carousel-control-next d-none d-md-flex" href="#my-carousel" role="button" data-slide="next">
+          <span class="fas fa-angle-right fa-3x" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
-
-      <div class="slider-container">
-        <input type="radio" name="slides" class="input-slide" id="input-slide-1" checked>
-        <div class="item">
-          <img src="img/poster.jpg" alt="poster">
-          <iframe  width="1920" height="1600" src="https://www.youtube-nocookie.com/embed/s2DdDABq5ZU?playlist=s2DdDABq5ZU&controls=0&autoplay=1&mute=1&loop=1" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <div class="text-wrapper carousel-caption">
-            <div class="container">
-              <h2>Derrallodor Web</h2>
-              <p>Experiencia, motivación, atención al detalle</p>
-              <a href="contacto.html" class="btn">Conocer más</a>
-            </div>
-          </div>
-        </div>
-        <input type="radio" name="slides" class="input-slide" id="input-slide-2">
-        <div class="item">
-          <img loading="lazy" src="img/slide2.jpg" alt="slide 2" loading="lazy">
-          <div class="text-wrapper carousel-caption">
-            <div class="container">
-              <h2>+400 proyectos con distintas Tecnologías</h2>
-              <p>PHP, Javascript, React, Wordpress</p>
-              <a href="proyectos.html" class="btn">Ver Proyectos</a>
-            </div>
-          </div>
-        </div>
-        <input type="radio" name="slides" class="input-slide" id="input-slide-3">
-        <div class="item">
-          <img loading="lazy" src="img/slide3.jpg" alt="slide 3" loading="lazy">
-          <div class="text-wrapper carousel-caption">
-            <div class="container">
-              <h2>Formación Continua</h2>
-              <p>Especialización en Gestión Estratégica de Sistemas y Tecnologías de la Información</p>
-              <p>Licenciatura en Administración de Empresas de Diseño</p>
-              <p>Curso de Desarrollo Fullstack (CODERHOUSE)</p>
-              <a href="perfil.html" class="btn">Ver Educación</a>
-            </div>
-          </div>
-        </div>
       </div>
       <svg class="divider" fill="#f5df4d" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
         style="position: absolute;bottom: -1px;left: 0;z-index: 3;">
