--- a/index.html
+++ b/index.html
@@ -109,38 +109,38 @@
     </section>
     <section id="skills"><!-- Seccion de skills (3 cajas) -->
       <div class="container">
-        <h2>Skills</h2>
-        <div class="wrapper">
-          <div class="single-skill">
+        <h2 class="mb-5">Skills</h2>
+        <div class="row">
+          <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-swatchbook"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam voluptate unde animi!</p>
             <a href="#" class="btn dark">Ver más</a>
           </div>
-          <div class="single-skill">
+          <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-code"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
               dignissimos</p>
               <a href="#" class="btn dark">Ver más</a>
           </div>
-        <div class="single-skill">
+        <div class="col-sm-6 col-xl-4 mb-5 single-skill">
           <i class="fas fa-business-time"></i>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
             dignissimos, molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
             voluptate unde animi!</p>
             <a href="#" class="btn dark">Ver más</a>
         </div>
-          <div class="single-skill">
+          <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-palette"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <a href="#" class="btn dark">Ver más</a>
           </div>
-          <div class="single-skill">
+          <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-glasses"></i>
             <p>Molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
               voluptate unde animi!</p>
             <a href="#" class="btn dark">Ver más</a>
           </div>
-          <div class="single-skill">
+          <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-file-signature"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
               dignissimos, molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
