seccion de proyectos acutalizada con clases de bootstrap

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     </section>
     <section id="proyectos"><!-- Seccion de proyectos mas relevantes con links al detalle del proyecto -->
         <h2>Proyectos</h2>
-        <div class="proyectos-wrapper">
-          <div class="single-project">
+        <div class="row mt-4 no-gutters proyectos-wrapper">
+          <div class="col-md-4 single-project">
             <a href="https://thisismybrave.org/" target="_blank">
               <img loading="lazy" src="img/proyecto1.png" alt="proyecto 1">
               <div class="wrapper-text">
@@ -169,7 +169,7 @@
               </div>
             </a>
           </div>
-          <div class="single-project">
+          <div class="col-md-4 single-project">
             <a href="https://houseofruth.org/" target="_blank">
               <img loading="lazy" src="img/proyecto2.jpg" alt="proyecto 2">
               <div class="wrapper-text">
@@ -178,7 +178,7 @@
               </div>
             </a>
           </div>
-          <div class="single-project">
+          <div class="col-md-4 single-project">
             <a href="https://www.run3rdalliance.com/" target="_blank">
               <img loading="lazy" src="img/proyecto3.jpg" alt="proyecto 3">
               <div class="wrapper-text">
