--- a/contacto.html
+++ b/contacto.html
@@ -3,22 +3,21 @@
 
 <head>
   <!-- configuracion invisible -->
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="theme-color" content="#0F1116">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<title>Mauricio Suarez</title><!-- Visible en la tab -->
-<link rel="stylesheet" href="css/style.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@100;400;700&display=swap"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#0F1116">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <title>Mauricio Suarez</title><!-- Visible en la tab -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@100;400;700&display=swap"
   rel="stylesheet">
-<script src="https://kit.fontawesome.com/3c9afaf9e1.js" crossorigin="anonymous"></script>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -53,15 +52,27 @@
     </div>
   </header>
   <main>
-    <section id="contacto" style="min-height: 70vh;"><!-- Seccion contacto con formulario -->
+    <section id="contacto"><!-- Seccion contacto con formulario -->
       <div class="container">
         <h2>Contacto</h2>
         <form action="index.html">
-          <input name="first" id="first" type="text" placeholder="Nombre">
-          <input name="last" id="last" type="text" placeholder="Apellido">
-          <input name="email" id="email" type="email" placeholder="Email">
-          <input name="tel" id="tel" type="text" placeholder="Teléfono">
-          <input name="enviar" id="enviar" type="submit" value="enviar">
+          <div class="form-row mb-2">
+            <div class="col">
+              <input name="first" id="first" type="text" placeholder="Nombre" class="form-control">
+            </div>
+            <div class="col">
+              <input name="last" id="last" type="text" placeholder="Apellido" class="form-control">
+            </div>
+          </div>
+          <div class="form-row mb-2">
+            <div class="col">
+              <input name="email" id="email" type="email" placeholder="Email" class="form-control">
+            </div>
+            <div class="col">
+              <input name="tel" id="tel" type="text" placeholder="Teléfono" class="form-control">
+            </div>
+          </div>
+          <input name="enviar" id="enviar" type="submit" value="enviar" class="form-control">
         </form>
       </div>
     </section>
@@ -76,7 +87,8 @@
       <span class="copyright">Mauricio Suarez 2021 © Todos los derechos resrvados.</span>
     </div>
   </footer>
-
+  <script src="https://kit.fontawesome.com/3c9afaf9e1.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
-
 </html>
