--- a/proyectos.html
+++ b/proyectos.html
@@ -11,12 +11,11 @@
   <meta name="theme-color" content="#0F1116">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>Mauricio Suarez</title><!-- Visible en la tab -->
-  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@100;400;700&display=swap"
-    rel="stylesheet">
-  <script src="https://kit.fontawesome.com/3c9afaf9e1.js" crossorigin="anonymous"></script>
-
+  rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header id="navigation">
@@ -51,37 +50,37 @@
   </header>
   <main><!-- Seccion principal con... -->
     <section id="proyectos"><!-- Seccion de proyectos mas relevantes con links al detalle del proyecto -->
-        <h2>Proyectos</h2>
-        <div class="proyectos-wrapper">
-          <div class="single-project">
-            <a href="https://thisismybrave.org/" target="_blank">
-              <img loading="lazy" src="img/proyecto1.png" alt="proyecto 1">
-              <div class="wrapper-text">
-                <h3>This is My Brave</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, eaque.</p>
-              </div>
-            </a>
-          </div>
-          <div class="single-project">
-            <a href="https://houseofruth.org/" target="_blank">
-              <img loading="lazy" src="img/proyecto2.jpg" alt="proyecto 1">
-              <div class="wrapper-text">
-                <h3>House of Ruth</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, eaque.</p>
-              </div>
-            </a>
-          </div>
-          <div class="single-project">
-            <a href="https://www.run3rdalliance.com/" target="_blank">
-              <img loading="lazy" src="img/proyecto3.jpg" alt="proyecto 1">
-              <div class="wrapper-text">
-                <h3>R3A</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, eaque.</p>
-              </div>
-            </a>
-          </div>
+      <h2>Proyectos</h2>
+      <div class="row mt-4 no-gutters proyectos-wrapper">
+        <div class="col-md-4 single-project">
+          <a href="https://thisismybrave.org/" target="_blank">
+            <img loading="lazy" src="img/proyecto1.png" alt="proyecto 1">
+            <div class="wrapper-text">
+              <h3>This is My Brave</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, eaque.</p>
+            </div>
+          </a>
         </div>
-    </section>
+        <div class="col-md-4 single-project">
+          <a href="https://houseofruth.org/" target="_blank">
+            <img loading="lazy" src="img/proyecto2.jpg" alt="proyecto 2">
+            <div class="wrapper-text">
+              <h3>House of Ruth</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, eaque.</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 single-project">
+          <a href="https://www.run3rdalliance.com/" target="_blank">
+            <img loading="lazy" src="img/proyecto3.jpg" alt="proyecto 3">
+            <div class="wrapper-text">
+              <h3>R3A</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, eaque.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+  </section>
   </main>
   <footer id="footer"><!-- Footer con copyright y redes sociales -->
     <div class="container">
@@ -92,6 +91,8 @@
       <span class="copyright">Mauricio Suarez 2021 © Todos los derechos resrvados.</span>
     </div>
   </footer>
-
+  <script src="https://kit.fontawesome.com/3c9afaf9e1.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html> 
