--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
                 <div class="text-wrap">
                   <h3>Articulo 1</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione perferendis omnis nobis maiores exercitationem vitae tempore quidem necessitatibus deleniti dolorum veniam. Vero, omnis minima!</p>
-                  <a href="#" class="btn dark2">Leer más</a>
+                  <a href="#" class="btn btn--dark2">Leer más</a>
                 </div>
               </div>
           </div>
@@ -72,7 +72,7 @@
               </figure>
               <h4>Articulo 1</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione...</p>
-              <a href="#" class="btn dark2">Leer más</a>
+              <a href="#" class="btn btn--dark2">Leer más</a>
             </div>
             <div class="single-article">
               <figure>
@@ -80,7 +80,7 @@
               </figure>
               <h4>Articulo 1</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione...</p>
-              <a href="#" class="btn dark2">Leer más</a>
+              <a href="#" class="btn btn--dark2">Leer más</a>
             </div>
             <div class="single-article">
               <figure>
@@ -88,12 +88,12 @@
               </figure>
               <h4>Articulo 1</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione...</p>
-              <a href="#" class="btn dark2">Leer más</a>
+              <a href="#" class="btn btn--dark2">Leer más</a>
             </div>
           </div>
         </div> 
         <div class="link-container">
-          <a href="blog.html" class="btn dark">Ver Todos</a>
+          <a href="blog.html" class="btn btn--dark">Ver Todos</a>
         </div> 
       </div>
       <svg class="divider" fill="#0F1116" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
