--- a/index.html
+++ b/index.html
@@ -114,38 +114,38 @@
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-swatchbook"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-code"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
               dignissimos</p>
-              <a href="#" class="btn dark">Ver más</a>
+              <a href="#" class="btn btn--dark">Ver más</a>
           </div>
         <div class="col-sm-6 col-xl-4 mb-5 single-skill">
           <i class="fas fa-business-time"></i>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
             dignissimos, molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
             voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
         </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-palette"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-glasses"></i>
             <p>Molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
               voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-file-signature"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
               dignissimos, molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
               voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
         </div>
       </div>
@@ -225,7 +225,7 @@
                 <div class="text-wrap">
                   <h3>Articulo 1</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione perferendis omnis nobis maiores exercitationem vitae tempore quidem necessitatibus deleniti dolorum veniam. Vero, omnis minima!</p>
-                  <a href="#" class="btn dark2">Leer más</a>
+                  <a href="#" class="btn btn--dark2">Leer más</a>
                 </div>
               </div>
           </div>
@@ -236,7 +236,7 @@
               </figure>
               <h4>Articulo 1</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione...</p>
-              <a href="#" class="btn dark2">Leer más</a>
+              <a href="#" class="btn btn--dark2">Leer más</a>
             </div>
             <div class="single-article">
               <figure>
@@ -244,7 +244,7 @@
               </figure>
               <h4>Articulo 1</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione...</p>
-              <a href="#" class="btn dark2">Leer más</a>
+              <a href="#" class="btn btn--dark2">Leer más</a>
             </div>
             <div class="single-article">
               <figure>
@@ -252,12 +252,12 @@
               </figure>
               <h4>Articulo 1</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel saepe, corporis labore laudantium blanditiis ratione...</p>
-              <a href="#" class="btn dark2">Leer más</a>
+              <a href="#" class="btn btn--dark2">Leer más</a>
             </div>
           </div>
         </div> 
         <div class="link-container">
-          <a href="blog.html" class="btn dark">Ver Todos</a>
+          <a href="blog.html" class="btn btn--dark">Ver Todos</a>
         </div> 
       </div>
       <svg class="divider" fill="#0F1116" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
