--- a/perfil.html
+++ b/perfil.html
@@ -158,38 +158,38 @@
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-swatchbook"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-code"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
               dignissimos</p>
-              <a href="#" class="btn dark">Ver más</a>
+              <a href="#" class="btn btn--dark">Ver más</a>
           </div>
         <div class="col-sm-6 col-xl-4 mb-5 single-skill">
           <i class="fas fa-business-time"></i>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
             dignissimos, molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
             voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
         </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-palette"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-glasses"></i>
             <p>Molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
               voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
           <div class="col-sm-6 col-xl-4 mb-5 single-skill">
             <i class="fas fa-file-signature"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque quasi necessitatibus eius
               dignissimos, molestiae accusantium ullam temporibus hic quam et ratione ipsum repellat distinctio optio numquam
               voluptate unde animi!</p>
-            <a href="#" class="btn dark">Ver más</a>
+            <a href="#" class="btn btn--dark">Ver más</a>
           </div>
         </div>
       </div>
