--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="keywords" content="Contacto, Mauricio, Suarez, Web, Wordpress, HTML, CSS, JS, Proyectos, SEO, Websites, Sitios Web, Calidad, Precio, barato">
+  <meta name="description" content="Web personal de Mauricio Suarez, esta es la seccion de contacto donde podras enviar un formulari para que te contacten.">
+
+  <meta property="og:title" content="Mauricio Suarez | Blog">
+  <meta property="og:description" content="Web personal de Mauricio Suarez, esta es la seccion de contacto donde podras enviar un formulari para que te contacten.">
+  <meta property="og:image" content="img/photo_profile.jpg">
+  <meta property="og:url" content="contacto.html">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <meta property="og:site_name" content="Mauricio Suarez">
+  <meta name="twitter:image:alt" content="Mauricio Suarez Profile Picture">
+
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
@@ -27,7 +40,7 @@
       <div class="flex">
         <figure>
           <a href="index.html"><img loading="lazy" src="img/logo-yellow.png" alt="Logo"></a>
-          <h1>Mauricio Suarez</h1>
+          <p class="sr-only">Mauricio Suarez</p>
         </figure>
         <input type="checkbox" name="mobile-menu" id="mobile-menu">
         <label for="mobile-menu">Menú</label>
@@ -52,9 +65,17 @@
     </div>
   </header>
   <main>
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Contacto</li>
+        </ol>
+      </nav>
+    </div>
     <section id="contacto"><!-- Seccion contacto con formulario -->
       <div class="container">
-        <h2>Contacto</h2>
+        <h1>Contacto</h1>
         <form action="index.html">
           <div class="form-row mb-2">
             <div class="col">
