--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="keywords" content="Mauricio, Suarez, Web, Wordpress, HTML, CSS, JS, Proyectos, SEO, Websites, Sitios Web, Calidad, Precio, barato">
+  <meta name="description" content="Web personal de Mauricio Suarez, su portafolio, experiencia, estudios y contacto.">
+
+  <meta property="og:title" content="Mauricio Suarez">
+  <meta property="og:description" content="Web personal de Mauricio Suarez, su portafolio, experiencia, estudios y contacto.">
+  <meta property="og:image" content="img/photo_profile.jpg">
+  <meta property="og:url" content="index.html">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <meta property="og:site_name" content="Mauricio Suarez">
+  <meta name="twitter:image:alt" content="Mauricio Suarez Profile Picture">
+
+
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
