--- a/perfil.html
+++ b/perfil.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="keywords" content="Perfil, Mauricio, Suarez, Web, Wordpress, HTML, CSS, JS, Proyectos, SEO, Websites, Sitios Web, Calidad, Precio, barato">
+  <meta name="description" content="Web personal de Mauricio Suarez, esta es la seccion del Perfil con la informacion profesional y academica de Mauricio Suarez">
+
+  <meta property="og:title" content="Mauricio Suarez | Perfil">
+  <meta property="og:description" content="Web personal de Mauricio Suarez, esta es la seccion del Perfil con la informacion profesional y academica de Mauricio Suarez.">
+  <meta property="og:image" content="img/photo_profile.jpg">
+  <meta property="og:url" content="blog.html">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <meta property="og:site_name" content="Mauricio Suarez | Perfil">
+  <meta name="twitter:image:alt" content="Mauricio Suarez Profile Picture">
+
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
@@ -24,7 +37,7 @@
       <div class="flex">
         <figure>
           <a href="index.html"><img loading="lazy" src="img/logo-yellow.png" alt="Logo"></a>
-          <h1>Mauricio Suarez</h1>
+          <p class="sr-only">Mauricio Suarez</p>
         </figure>
         <input type="checkbox" name="mobile-menu" id="mobile-menu">
         <label for="mobile-menu">Menú</label>
@@ -49,7 +62,14 @@
     </div>
   </header>
   <main><!-- Seccion principal con... -->
-
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Perfil</li>
+        </ol>
+      </nav>
+    </div>
     <section id="perfil"><!-- Seccion del Perfil -->
       <div class="container">
         <div class="intro">
@@ -57,7 +77,7 @@
             <img src="img/photo_profile.jpg" alt="Mauricio Suarez profile picture">
           </div>
           <div class="text-wrap">
-            <h2>Mauricio Alberto Suárez Colina</h2>
+            <h1>Mauricio Alberto Suárez Colina</h1>
             <p>{ FullStack Web Developer }
               <br>{ Especialista en Gestión Estratégica de Sistemas y Tecnologías de la Información }
               <br>{ Licenciado en Administración de Empresas de Diseño } </p> 
