title fixed SEO

--- a/contacto.html
+++ b/contacto.html
@@ -10,13 +10,13 @@
   <meta name="keywords" content="Contacto, Mauricio, Suarez, Web, Wordpress, HTML, CSS, JS, Proyectos, SEO, Websites, Sitios Web, Calidad, Precio, barato">
   <meta name="description" content="Web personal de Mauricio Suarez, esta es la seccion de contacto donde podras enviar un formulari para que te contacten.">
 
-  <meta property="og:title" content="Mauricio Suarez | Blog">
+  <meta property="og:title" content="Mauricio Suarez | Contacto">
   <meta property="og:description" content="Web personal de Mauricio Suarez, esta es la seccion de contacto donde podras enviar un formulari para que te contacten.">
-  <meta property="og:image" content="img/photo_profile.jpg">
+  <meta property="og:image" content="https://proyecto-personal-suarez.netlify.app/img/photo_profile.jpg">
   <meta property="og:url" content="contacto.html">
   <meta name="twitter:card" content="summary_large_image">
 
-  <meta property="og:site_name" content="Mauricio Suarez">
+  <meta property="og:site_name" content="Mauricio Suarez | Contacto">
   <meta name="twitter:image:alt" content="Mauricio Suarez Profile Picture">
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
@@ -25,7 +25,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#0F1116">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <title>Mauricio Suarez</title><!-- Visible en la tab -->
+  <title>Mauricio Suarez | Contacto</title><!-- Visible en la tab -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@100;400;700&display=swap"
   rel="stylesheet">
