--- a/proyectos.html
+++ b/proyectos.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="Mauricio Suarez | Proyectos">
   <meta property="og:description" content="Web personal de Mauricio Suarez, esta es la seccion del Poryectos con 3 proyectos destacados.">
-  <meta property="og:image" content="img/photo_profile.jpg">
+  <meta property="og:image" content="https://proyecto-personal-suarez.netlify.app/img/photo_profile.jpg">
   <meta property="og:url" content="blog.html">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -23,7 +23,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#0F1116">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <title>Mauricio Suarez</title><!-- Visible en la tab -->
+  <title>Mauricio Suarez | Proyectos</title><!-- Visible en la tab -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@100;400;700&display=swap"
   rel="stylesheet">
