--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="Mauricio Suarez">
   <meta property="og:description" content="Web personal de Mauricio Suarez, su portafolio, experiencia, estudios y contacto.">
-  <meta property="og:image" content="img/photo_profile.jpg">
+  <meta property="og:image" content="https://proyecto-personal-suarez.netlify.app/img/photo_profile.jpg">
   <meta property="og:url" content="index.html">
   <meta name="twitter:card" content="summary_large_image">
 
